Fix "Table/Gantt" disappearing bug("jumped" on second line on resize)

--- a/client/css/data-services-area.less
+++ b/client/css/data-services-area.less
@@ -132,7 +132,7 @@ menu[type=toolbar] {
 
 #resultsMessage {
 	display: inline-block;
-	min-width: 17em;
+	//min-width: 17em;
     text-align: right;
 }
 
@@ -141,7 +141,7 @@ menu[type=toolbar] {
  */
 
 #resultsBar {
-	text-align: center
+	text-align: center;
 }
 
 #tableCG {
