--- a/client/css/help.less
+++ b/client/css/help.less
@@ -31,7 +31,7 @@ html, body {
 	height: 100%;
 	padding: 0;
 	margin: 0;
-	min-width: 960px;
+	min-width: @base-width;
 }
 
 div {
