--- a/client/css/home.less
+++ b/client/css/home.less
@@ -32,7 +32,7 @@ html, body {
 	padding: 0;
 	margin: 0;
 	//overflow: hidden;
-	min-width: 960px;
+	min-width: @base-width;
 }
 
 .biglogo {
