--- a/client/css/map.less
+++ b/client/css/map.less
@@ -12,7 +12,7 @@
     margin: 0;
     padding: 0;
 	overflow: hidden;
-	min-width: 960px;
+	min-width: @base-width;
 /*	display: -moz-box;
 	-moz-box-orient: vertical;
 	display: -webkit-flex;
